<resources>
    <string name="app_name">飞扬备忘录</string>
    <string name="action_settings">设置</string>
    <string name="title">标题</string>
    <string name="location">地点</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="ended">已结束</string>
    <string name="will_start">后开始</string>
    <string name="repeat">重复</string>
    <string name="remind">提醒</string>
    <string name="description">说明</string>
    <string name="add">新加</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="all">所有</string>
    <string name="future">未到期</string>
    <string name="once">一次性活动</string>
    <string name="every_day">每天</string>
    <string name="every_week">每周</string>
    <string name="every_month">每月</string>
    <string name="every_year">每年</string>
    <string name="every_year_lunar">农历每年</string>
    <string name="user_define">自定义</string>
    <string name="none">无</string>
    <string name="on_time">准时</string>
    <string name="five_minutes_before">5分钟前</string>
    <string name="ten_minutes_before">10分钟前</string>
    <string name="fifteen_minutes_before">15分钟前</string>
    <string name="thirty_minutes_before">30分钟前</string>
    <string name="one_hours_before">1小时前</string>
    <string name="two_hours_before">2小时前</string>
    <string name="twenty_four_hours_before">24小时前</string>
    <string name="two_day_before">2天前</string>
    <string name="one_week_before">1周前</string>
    <string name="examine">查看活动</string>
    <string name="about">关于</string>
    <string name="are_you_sure_delete">是否删除此活动？</string>
    <string name="are_you_sure_finish">是否结束此活动？</string>
    <string name="no_title">无标题</string>
    <string name="no_message">无内容</string>
    <string name="finish_time">完成时间</string>
    <string name="now_no_activity">当前没有待办活动</string>
    <string name="now_no_finish_activity">当前没有已结束的活动</string>
    <string name="now_no_future_activity">当前没有未到期的活动</string>
    <string name="next_activity">下一条活动是</string>
    <string name="start_time">距离开始时间还有</string>
    <string name="press_button_to_add">请点击右上角的+按钮添加一条吧!</string>
    <string name="clear_all">清空</string>
    <string name="are_you_sure_delete_all_finish">是否删除所有已结束的活动？</string>
    <string name="choose_an_activity_to_finish">请选择一条活动结束它吧！</string>
    <string name="back_to_main_activity_to_add">请返回主界面添加一条吧!</string>
    <string name="setting">设置</string>
    <string name="not_login">未登录</string>
    <string name="click_to_login">点击登录云平台</string>
    <string name="synchronize">同步</string>
    <string name="share">分享</string>
    <string name="money">打赏开发者</string>
    <string name="version">版本</string>
</resources>
