<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yang.backup.ActivityExamine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/examine"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/examine"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView_examine_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LinearLayout_examine_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location"
                android:cropToPadding="true"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_gps" />

            <TextView
                android:id="@+id/TextView_examine_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_examine_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start"
                android:cropToPadding="true"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_date" />

            <TextView
                android:id="@+id/TextView_examine_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:gravity="start"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/repeat"
                android:cropToPadding="true"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_repeat" />

            <TextView
                android:id="@+id/TextView_examine_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/once"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_examine_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/remind"
                android:cropToPadding="true"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_ring" />

            <TextView
                android:id="@+id/TextView_examine_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/none"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_examine_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description"
                android:cropToPadding="true"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_description" />

            <TextView
                android:id="@+id/TextView_examine_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:gravity="end"
                android:text="@string/none"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_examine_finish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start"
                android:cropToPadding="true"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_date" />

            <TextView
                android:id="@+id/TextView_examine_finish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:gravity="start"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/floral_white"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/float_basic_data_bg"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LinearLayout_examine_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/end"
                    android:cropToPadding="true"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_all" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout_examine_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete"
                    android:cropToPadding="true"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_examine_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/modify"
                    android:cropToPadding="true"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_modify" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


