<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_left"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@color/white">



    <LinearLayout
        android:id="@+id/LinearLayout_drawer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ui_deep_gray" />

    <LinearLayout
        android:id="@+id/LinearLayout_drawer_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_all"
            android:contentDescription="@string/ended"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/ended"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_drawer_future"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_all"
            android:contentDescription="@string/future"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/future"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>


