<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yang.backup.MainActivity">

    <ExpandableListView
        android:id="@+id/expandablelistview_main_record"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:drawSelectorOnTop="false"
        android:listSelector="#00000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ui_deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:background="@color/ui_light_gray">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/float_basic_data_bg"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearlayout_main_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/all"
                    android:cropToPadding="true"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_all" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearlayout_main_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add"
                    android:cropToPadding="true"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_main_future"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/all"
                    android:cropToPadding="true"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_all" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/future"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


